Actualización: Sincronización con MongoDB y ajustes en .env

--- a/server/.env
+++ b/server/.env
@@ -1,14 +1,11 @@
 # MongoDB Atlas Connection
-MONGO_URI=mongodb+srv://gamuso:A1oIiNfTFWYnkQbu@cluster0.9vrg2.mongodb.net/?retryWrites=true&w=majority
-
+MONGO_URI=mongodb+srv://gamuso:A1oIiNfTFWYnkQbu@cluster0.9vrg2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # JWT Secret
 JWT_SECRET=pototiponaruto2
-
 # Credenciales de Administradores
 ADMIN1_USERNAME=DaniAdmin
 ADMIN1_EMAIL=estacionroguetrader@gmail.com
 ADMIN1_PASSWORD=popotiponaruto2
-
 ADMIN2_USERNAME=AngelAdmin
 ADMIN2_EMAIL=estacionroguetrader@gmail.com
 ADMIN2_PASSWORD=piterpandemolde2
