--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
         "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.8.3"
+        "mongoose": "^7.8.3",
+        "winston": "^10.9.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
