--- a/server/.env
+++ b/server/.env
@@ -9,4 +9,4 @@ ADMIN1_PASSWORD=popotiponaruto2
 ADMIN2_USERNAME=AngelAdmin
 ADMIN2_EMAIL=estacionroguetrader@gmail.com
 ADMIN2_PASSWORD=piterpandemolde2
-FRONTEND_URL=https://web-app-j2gq.vercel.app
+FRONTEND_URL=https://client-delta-drab.vercel.app/
